--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -1,5 +1,24 @@
 {% extends "_layouts/auth.njk" %}
 
 {% block body %}
-  <h1>Hello world</h1>
+ <form action="/signup" method="post">
+  <label for="avatar">
+    <img src="/images/avatar.svg" height="24"/>
+  </label>
+
+    <input id="avatar" name="avatar" type="file"/>
+
+    <input type="text" name="name" placeholder="Nome Completo" />
+    <input type="email" name="email" placeholder="Seu e-mail" />
+    <input type="password" name="password" placeholder="Senha secreta" />
+
+  <label for="provider">
+    <input type="checkbox" id="provider" name="provider" value="1">
+    Sou cabelereiro
+  </label>
+
+  <button type="submit">Criar conta</button>
+
+  <a href="/">Já possuo conta</a>
+  </form>
 {% endblock %}
