--- a/src/app/views/auth/signin.njk
+++ b/src/app/views/auth/signin.njk
@@ -1,8 +1,7 @@
-{% extends "_layouts/auth.njk" %} {% block body %}
+{% extends "_layouts/auth.njk" %}
+{% block body %}
 <form action="/signin" method="post">
   <img src="/images/logo.svg" height="42" />
-
-  <input id="avatar" name="avatar" type="file" />
 
   <input type="email" name="email" placeholder="Seu e-mail" />
   <input type="password" name="password" placeholder="Senha secreta" />
