--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -15,7 +15,7 @@
     <input type="password" name="password" placeholder="Senha secreta" />
 
   <label for="provider">
-    <input type="checkbox" id="provider" name="provider" value="1">
+    <input type="checkbox" id="provider" name="provider" value="1"/>
     Sou cabelereiro
   </label>
 
