--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -1,4 +1,6 @@
-{% extends "_layouts/default.njk"%} {% block body %}
+{% extends "_layouts/default.njk"%}
+{% block body %}
+
 <div class="content">
   <strong>Olá, {{ user.name }}</strong>
   <p>Inicie um agendamento escolhendo um professional abaixo:</p>
