--- a/src/app/views/_layouts/default.njk
+++ b/src/app/views/_layouts/default.njk
@@ -2,7 +2,7 @@
 <html lang="pt">
   {% include "_partials/head.njk" %}
   <body>
-    <div class="main-wrapper">
+    <div class="main-wrapper"/>
       {% block body %}{% endblock %}
     </body>
   </html>
