--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -18,7 +18,7 @@
           </label>
 
           <button type="submit">Agendar</button>
-        </div>
+      </div>
     </form>
 
 
@@ -27,7 +27,14 @@
   <script type="text/javascript">
     flatpickr(".flatpickr", {
       minDate: new Date(),
-      dateFormat: "d/m/Y"
+      dateFormat: "d/m/Y",
+      onChange: function (date){
+        fetch(`/app/available/{{ provider.id }}?date=${date[0].getTime()}`).then(function (response){
+          response.text().then(function (html){
+            document.getElementById('hours').innerHTML = html
+          })
+        })
+      }
     });
   </script>
   {% endblock %}
