--- a/src/app/views/_layouts/default.njk
+++ b/src/app/views/_layouts/default.njk
@@ -2,7 +2,12 @@
 <html lang="pt">
   {% include "_partials/head.njk" %}
   <body>
-    <div class="main-wrapper"/>
-      {% block body %}{% endblock %}
+      <div class="main-wrapper">
+
+      {% block body %}
+
+      {% endblock %}
+
+      </div>
     </body>
   </html>
